-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: None
-
Component/s: hotspot
-
b21
/home/shade/trunks/jdk-jdk/src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp: In static member function 'static nmethod* SharedRuntime::generate_native_wrapper(MacroAssembler*, const methodHandle&, int, BasicType*, VMRegPair*, BasicType)':
/home/shade/trunks/jdk-jdk/src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp:2196:30: error: 'Universe' has not been declared
if (is_critical_native && !Universe::heap()->supports_object_pinning()) {
^~~~~~~~
/home/shade/trunks/jdk-jdk/src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp:2306:15: error: 'Universe' has not been declared
if (Universe::heap()->supports_object_pinning()) {
^~~~~~~~
/home/shade/trunks/jdk-jdk/src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp:2196:30: error: 'Universe' has not been declared
if (is_critical_native && !Universe::heap()->supports_object_pinning()) {
^~~~~~~~
/home/shade/trunks/jdk-jdk/src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp:2306:15: error: 'Universe' has not been declared
if (Universe::heap()->supports_object_pinning()) {
^~~~~~~~
- relates to
-
JDK-8223136 Move compressed oops functions to CompressedOops class
-
- Resolved
-